problem-statement-1/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wisecow
  labels:
    name: wisecow
    app: wisecow
