problem-statement-1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
  labels:
    app: wisecow
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4499
    protocol: TCP
    name: http
  selector:
    app: wisecow
